--- a/Project13_100days/Project13_100days/Base.lproj/Main.storyboard
+++ b/Project13_100days/Project13_100days/Base.lproj/Main.storyboard
@@ -16,41 +16,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ET-dx-aIy">
-                                <rect key="frame" x="9" y="103" width="375" height="583"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ajb-Cd-rAT">
-                                        <rect key="frame" x="10" y="10" width="355" height="563"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="top" secondItem="8ET-dx-aIy" secondAttribute="top" constant="10" id="10t-1F-Ejg"/>
-                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="centerY" secondItem="8ET-dx-aIy" secondAttribute="centerY" id="OnB-br-cOg"/>
-                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="centerX" secondItem="8ET-dx-aIy" secondAttribute="centerX" id="dLH-cu-5yh"/>
-                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="leading" secondItem="8ET-dx-aIy" secondAttribute="leading" constant="10" id="loQ-BD-JeD"/>
-                                </constraints>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intensity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEt-9S-ggH">
-                                <rect key="frame" x="9" y="722" width="65" height="21"/>
+                                <rect key="frame" x="9" y="678" width="65" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="2Ci-Wc-9uv"/>
+                                    <constraint firstAttribute="height" constant="21" id="jZX-oB-FB9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="iTH-s6-QC1">
-                                <rect key="frame" x="82" y="717" width="297" height="30"/>
+                                <rect key="frame" x="82" y="673" width="297" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="ugd-n9-9MY"/>
+                                </constraints>
                                 <connections>
                                     <action selector="intensityChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Pma-Ui-Wzg"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Juf-gt-pwL">
-                                <rect key="frame" x="9" y="754" width="120" height="44"/>
+                                <rect key="frame" x="9" y="755" width="200" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="G7h-Mz-aVJ"/>
-                                    <constraint firstAttribute="height" constant="44" id="sUY-hy-jWG"/>
+                                    <constraint firstAttribute="width" constant="200" id="ywE-Pt-alu"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Change Filter"/>
@@ -59,9 +46,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxh-Q7-20T">
-                                <rect key="frame" x="264" y="754" width="120" height="44"/>
+                                <rect key="frame" x="264" y="754" width="120" height="34.333333333333371"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="B5h-yw-wvw"/>
+                                    <constraint firstAttribute="width" constant="120" id="b5c-8p-cXd"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Save"/>
@@ -69,32 +56,65 @@
                                     <action selector="save:" destination="BYZ-38-t0r" eventType="touchUpInside" id="77V-Si-KHR"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Radius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwa-35-3lp">
+                                <rect key="frame" x="9" y="722" width="52" height="22.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="IkM-Oe-JKp">
+                                <rect key="frame" x="84" y="717" width="295" height="31"/>
+                                <connections>
+                                    <action selector="radiusChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="ky5-mg-tE6"/>
+                                </connections>
+                            </slider>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ET-dx-aIy">
+                                <rect key="frame" x="9" y="115" width="375" height="523"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ajb-Cd-rAT">
+                                        <rect key="frame" x="10" y="10" width="355" height="503"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="top" secondItem="8ET-dx-aIy" secondAttribute="top" constant="10" id="9Dq-5B-cDF"/>
+                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="centerX" secondItem="8ET-dx-aIy" secondAttribute="centerX" id="Uvg-cP-Akq"/>
+                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="leading" secondItem="8ET-dx-aIy" secondAttribute="leading" constant="10" id="Zwr-oE-Ibi"/>
+                                    <constraint firstItem="ajb-Cd-rAT" firstAttribute="centerY" secondItem="8ET-dx-aIy" secondAttribute="centerY" id="gKw-uw-bXg"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="iTH-s6-QC1" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="29h-Vj-N6g"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Juf-gt-pwL" secondAttribute="bottom" constant="20" id="8XB-Ys-djA"/>
-                            <constraint firstItem="iTH-s6-QC1" firstAttribute="leading" secondItem="bEt-9S-ggH" secondAttribute="trailing" constant="10" id="Md4-qh-XJu"/>
-                            <constraint firstItem="8ET-dx-aIy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mx6-8O-qGF"/>
-                            <constraint firstItem="Juf-gt-pwL" firstAttribute="bottom" secondItem="qxh-Q7-20T" secondAttribute="bottom" id="PLP-Kn-LXV"/>
-                            <constraint firstItem="Juf-gt-pwL" firstAttribute="top" secondItem="iTH-s6-QC1" secondAttribute="bottom" constant="8" id="UE3-SA-Zjm"/>
-                            <constraint firstItem="8ET-dx-aIy" firstAttribute="leading" secondItem="bEt-9S-ggH" secondAttribute="leading" id="V3g-39-vh7"/>
-                            <constraint firstItem="bEt-9S-ggH" firstAttribute="leading" secondItem="Juf-gt-pwL" secondAttribute="leading" id="VW5-zJ-Rlc"/>
-                            <constraint firstItem="8ET-dx-aIy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="9" id="W6p-X0-Jpe"/>
-                            <constraint firstItem="iTH-s6-QC1" firstAttribute="top" secondItem="8ET-dx-aIy" secondAttribute="bottom" constant="31" id="Xc5-DU-nFV"/>
-                            <constraint firstItem="8ET-dx-aIy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="a4F-0N-2in"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Juf-gt-pwL" secondAttribute="bottom" constant="20" id="b9E-ez-DLQ"/>
-                            <constraint firstItem="Juf-gt-pwL" firstAttribute="top" secondItem="bEt-9S-ggH" secondAttribute="bottom" constant="11" id="c0Q-Db-eLk"/>
-                            <constraint firstItem="Juf-gt-pwL" firstAttribute="top" secondItem="qxh-Q7-20T" secondAttribute="top" id="ghd-C4-GIk"/>
-                            <constraint firstItem="8ET-dx-aIy" firstAttribute="trailing" secondItem="qxh-Q7-20T" secondAttribute="trailing" id="ipq-TH-k4H"/>
-                            <constraint firstItem="bEt-9S-ggH" firstAttribute="top" secondItem="8ET-dx-aIy" secondAttribute="bottom" constant="36" id="x6z-R6-avW"/>
+                            <constraint firstItem="bEt-9S-ggH" firstAttribute="leading" secondItem="Lwa-35-3lp" secondAttribute="leading" id="0kH-X7-9tK"/>
+                            <constraint firstItem="iTH-s6-QC1" firstAttribute="leading" secondItem="bEt-9S-ggH" secondAttribute="trailing" constant="10" id="5i8-ci-CAc"/>
+                            <constraint firstItem="IkM-Oe-JKp" firstAttribute="leading" secondItem="Lwa-35-3lp" secondAttribute="trailing" constant="25" id="D63-Ag-0jd"/>
+                            <constraint firstItem="8ET-dx-aIy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="12" id="L9O-mh-en5"/>
+                            <constraint firstItem="iTH-s6-QC1" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Ns5-sB-ITF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Juf-gt-pwL" secondAttribute="bottom" constant="20.666666666666629" id="XW2-sf-zDG"/>
+                            <constraint firstItem="8ET-dx-aIy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bKO-EZ-3ax"/>
+                            <constraint firstItem="qxh-Q7-20T" firstAttribute="trailing" secondItem="8ET-dx-aIy" secondAttribute="trailing" id="cOx-Hu-x6h"/>
+                            <constraint firstItem="Juf-gt-pwL" firstAttribute="top" secondItem="IkM-Oe-JKp" secondAttribute="bottom" constant="8.3333333333333712" id="coR-Oz-jQU"/>
+                            <constraint firstItem="bEt-9S-ggH" firstAttribute="top" secondItem="8ET-dx-aIy" secondAttribute="bottom" constant="40" id="drs-Zk-P6b"/>
+                            <constraint firstItem="Lwa-35-3lp" firstAttribute="top" secondItem="bEt-9S-ggH" secondAttribute="bottom" constant="23" id="eUU-kN-ayf"/>
+                            <constraint firstItem="Lwa-35-3lp" firstAttribute="leading" secondItem="Juf-gt-pwL" secondAttribute="leading" id="elr-t2-brg"/>
+                            <constraint firstItem="8ET-dx-aIy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="9" id="fEz-Tg-RO2"/>
+                            <constraint firstItem="Juf-gt-pwL" firstAttribute="top" secondItem="Lwa-35-3lp" secondAttribute="bottom" constant="11" id="kXn-cC-4Qe"/>
+                            <constraint firstItem="8ET-dx-aIy" firstAttribute="leading" secondItem="bEt-9S-ggH" secondAttribute="leading" id="kuM-ro-lsQ"/>
+                            <constraint firstItem="iTH-s6-QC1" firstAttribute="top" secondItem="8ET-dx-aIy" secondAttribute="bottom" constant="35" id="mtc-aq-EAF"/>
+                            <constraint firstAttribute="bottom" secondItem="iTH-s6-QC1" secondAttribute="bottom" constant="150" id="pWQ-nE-T03"/>
+                            <constraint firstItem="IkM-Oe-JKp" firstAttribute="top" secondItem="iTH-s6-QC1" secondAttribute="bottom" constant="15" id="ph2-Xy-p9R"/>
+                            <constraint firstItem="qxh-Q7-20T" firstAttribute="top" secondItem="IkM-Oe-JKp" secondAttribute="bottom" constant="7" id="suF-mQ-Z7Q"/>
+                            <constraint firstItem="iTH-s6-QC1" firstAttribute="trailing" secondItem="IkM-Oe-JKp" secondAttribute="trailing" id="vp3-Yj-xzk"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="an4-kJ-sPn"/>
                     <connections>
+                        <outlet property="changefilterButton" destination="Juf-gt-pwL" id="3oO-dQ-0KV"/>
                         <outlet property="imageView" destination="ajb-Cd-rAT" id="5oi-Zr-7qA"/>
                         <outlet property="intensity" destination="iTH-s6-QC1" id="4aR-Mr-Lb8"/>
+                        <outlet property="radius" destination="IkM-Oe-JKp" id="n6l-vH-97X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
